<resources>
    <string name="app_name">斟行</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="debt_ting">债事大厅</string>
    <string name="guang_chang">交易广场</string>
    <string name="query_zheng">征信查询</string>
    <string name="win_coopation">合作共赢</string>
    <string name="et_user_phone">请输入手机号</string>
    <string name="et_user_yzm">请输入验证码</string>
    <string name="send">发送</string>
    <string name="tv_login">用户名密码登录</string>
    <string name="tv_forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="tv_create_user">还没有账号? 现在就去</string>
    <string name="tv_free_rigiser">免费注册</string>
    <string name="regisier">注册</string>
    <string name="user_name">用户名</string>
    <string name="for_login">用于登录</string>
    <string name="phone_num">手机号</string>
    <string name="for_login_mi">用于登录和找回密码</string>
    <string name="yan_zheng_code">验证码</string>
    <string name="et_password">请输入验证码</string>
    <string name="password">设置密码</string>
    <string name="set_password">请设置密码</string>
    <string name="confit_password">确认密码</string>
    <string name="confit_mima">请确认密码</string>
    <string name="query">查询</string>
    <string name="debt_zw_name">债务人姓名</string>
    <string name="debt_name">身份证号/机构名称或代码</string>
    <string name="title_activity_debt__querry__buness__hall">Debt_Querry_Buness_Hall</string>
</resources>
