<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_title_left"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/back_finish" />
        </LinearLayout>


        <TextView
            android:id="@+id/title_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/regisier"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        style="@style/line_5dp"
        app:layout_constraintTop_toBottomOf="@id/title_bar_layout" />

    <LinearLayout
        android:id="@+id/user_name_line"
        style="@style/ll_style_magin_edite"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <TextView
            style="@style/textView_style"
            android:text="@string/user_name"

            />

        <EditText
            android:id="@+id/set_et_user"
            style="@style/editeText_style"
            android:hint="用户名不能大于7个字符" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        style="@style/line_5dp"
        app:layout_constraintTop_toBottomOf="@id/user_name_line" />

    <LinearLayout
        android:id="@+id/user_name_line2"
        style="@style/ll_style_magin_edite"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <TextView
            style="@style/textView_style"
            android:text="@string/phone_num" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/editeText_style"
            android:hint="@string/for_login_mi"
            android:inputType="phone"
           />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        style="@style/line_5dp"
        app:layout_constraintTop_toBottomOf="@id/user_name_line2" />

    <LinearLayout
        android:id="@+id/user_name_line3"
        style="@style/ll_style_magin_edite"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <TextView
            style="@style/textView_style"
            android:text="@string/yan_zheng_code" />

        <EditText
            android:id="@+id/et_yzm"
            style="@style/editeText_style"
            android:hint="@string/et_password"
            android:inputType="number"
             />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:id="@+id/send_yzm"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:background="@drawable/send_ma"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view4"
        style="@style/line_5dp"
        app:layout_constraintTop_toBottomOf="@id/user_name_line3" />

    <LinearLayout
        android:id="@+id/user_name_line4"
        style="@style/ll_style_magin_edite"
        app:layout_constraintTop_toBottomOf="@id/view4">

        <TextView
            style="@style/textView_style"
            android:text="@string/password" />

        <EditText
            android:id="@+id/set_password"
            style="@style/editeText_style"
            android:hint="@string/set_password"
            android:inputType="textPassword"
           />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:id="@+id/view5"
        style="@style/line_5dp"
        app:layout_constraintTop_toBottomOf="@id/user_name_line4" />

    <LinearLayout
        android:id="@+id/user_name_line5"
        style="@style/ll_style_magin_edite"
        app:layout_constraintTop_toBottomOf="@id/view5">

        <TextView
            style="@style/textView_style"
            android:text="@string/confit_password" />

        <EditText
            android:id="@+id/confit_password"
            style="@style/editeText_style"
            android:hint="@string/confit_mima"
            android:inputType="textPassword"
          />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <Button
        android:id="@+id/regiver"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_button_shape"
        android:gravity="center"
        android:text="@string/regisier"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/user_name_line5" />

    <TextView
        android:id="@+id/regisiter_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textSize="15sp"
        android:text="《用户服务协议》"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        />

</android.support.constraint.ConstraintLayout>