<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_title_left"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/back_finish" />
        </LinearLayout>


        <TextView
            android:id="@+id/title_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="忘记密码"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/title_bar_layout" />

    <LinearLayout
        android:id="@+id/user_name_line"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/phone_num"
            android:textColor="#333"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/set_et_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/for_login_mi"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_black"
            android:textSize="16sp"
            android:inputType="phone"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/user_name_line" />



    <LinearLayout
        android:id="@+id/user_name_line3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/yan_zheng_code"
            android:textColor="@color/light_hei"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_yzm2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/et_password"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_black"
            android:textSize="16sp"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:id="@+id/send_yzm2"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:background="@drawable/send_ma"
                android:gravity="center"
                android:text="@string/send"
                android:textSize="12sp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/user_name_line3" />
    <LinearLayout
        android:id="@+id/user_name_line4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="新密码"
            android:textColor="@color/light_hei"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/set_new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="请设置新密码"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_black"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/user_name_line4" />
    <LinearLayout
        android:id="@+id/user_name_line5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:text="@string/confit_password"
            android:textColor="@color/light_hei"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confit__new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/confit_mima"
            android:paddingStart="10dp"
            android:textColorHint="@color/light_black"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>
    <Button
        android:id="@+id/complete"
        app:layout_constraintTop_toBottomOf="@id/user_name_line5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_button_shape"
        android:gravity="center"
        android:text="完成"
        android:textStyle="bold"
        android:textColor="#fff"
        />


</android.support.constraint.ConstraintLayout>