<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/login_back">
    <ImageView
        android:id="@+id/login_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/login_finish"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_head"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:gravity="center"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:orientation="horizontal"
           android:layout_weight="1"
           android:layout_marginStart="30dp"
           android:layout_marginEnd="30dp"
           android:gravity="center_vertical">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:gravity="center">
               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@mipmap/login_phone"/>
           </LinearLayout>

           <EditText
               android:id="@+id/et_login_phone"
               android:layout_width="0dp"
               android:layout_weight="6"
               android:layout_marginStart="10dp"
               android:layout_height="match_parent"
               android:background="@null"
               android:gravity="center_vertical"
               android:hint="@string/et_user_phone"
               android:textColorHint="@color/light_bai"
               android:textSize="18sp"
               android:textColor="@color/light_bai"
               android:inputType="phone"/>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="1.5"
               android:gravity="center">
               <Space
                   android:layout_width="25dp"
                   android:layout_height="25dp"
                   />
           </LinearLayout>


       </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/login_yzm"/>
            </LinearLayout>

            <EditText
               android:id="@+id/et_login_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:hint="@string/et_user_yzm"
                android:layout_marginStart="10dp"
                android:textColorHint="@color/light_bai"
                android:textSize="18sp"
                android:textColor="@color/light_bai"
                android:inputType="number"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center">
                <Button
                    android:id="@+id/send_ma"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:background="@drawable/send_ma"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                   />
            </LinearLayout>


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#fff"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
        </Space>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/login_yzm"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/login_button_shape"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login"
                android:textStyle="bold"
                android:textColor="#fff"/>
           <LinearLayout
               android:layout_marginTop="100dp"
               android:layout_marginBottom="10dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="horizontal"
               android:gravity="center_horizontal|bottom">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/tv_create_user"
                   android:textColor="@color/light_bai"
                   android:textSize="14sp"/>
               <TextView
                   android:layout_marginStart="5dp"
                   android:id="@+id/login_regiver"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="15sp"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:text="@string/tv_free_rigiser"/>
           </LinearLayout>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>